[project]
name = "youqu-dbus"
description = ""
authors = [
    { name = "mikigo", email = "huangmingqiang@uniontech.com" },
]
dependencies = [
]
dynamic = [
  "version",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "GPL2.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
version = { path = "youqu_dbus/__version__.py" }

[tool.hatch.build.targets.wheel]
packages = [
    "/youqu_dbus",
]

