[project]
name = "pydbussend"
description = ""
authors = [
    { name = "mikigo", email = "huangmingqiang@uniontech.com" },
]
dependencies = [
    "funnylog2"
]
dynamic = [
  "version",
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "GPL2.0" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch]
version = { path = "pydbussend/__version__.py" }

[tool.hatch.build.targets.wheel]
packages = [
    "/pydbussend",
]
